# oil_gas_fpga

./: .gitignore  .gitmodules  README.md  setup-beta08.sh  setup-beta09.sh
apps/27stencil/: 27stencil.csv  27stencil.ipynb
apps/27stencil/OpenCL/: CMakeLists.txt  config.h.in
apps/27stencil/OpenCL/cl/: cl2.hpp  kernel.cl
apps/27stencil/OpenCL/src/: 27stencil.cpp
apps/27stencil/OpenMP/: CMakeLists.txt
apps/27stencil/OpenMP/src/: 27stencil.cpp
apps/27stencil/SYCL/: CMakeLists.txt
apps/27stencil/SYCL/src/: 27stencil.cpp
apps/CMP/: CMP.csv  CMP.ipynb  CMPFPGA.csv
apps/CMP/FPGA_SYCL/: CMakeLists.txt  README.md  aocl_fpga.sh  compile_fpga.sh  run_fpga.sh
apps/CMP/FPGA_SYCL/include/: utils.hpp
apps/CMP/FPGA_SYCL/src/: dirtmain.cpp  main.cpp  main_complete.cpp  main_hybrid.cpp  main_optimized.cpp  main_original.cpp  su_gather.cpp
apps/CMP/OpenCL/: CMakeLists.txt  README.md  config.h.in
apps/CMP/OpenCL/cl/: kernels.cl
apps/CMP/OpenCL/include/: utils.hpp
apps/CMP/OpenCL/src/: main.cpp  utils.cpp
apps/CMP/OpenMP/: CMakeLists.txt  CMakeLists.txt.pgi  README.md
apps/CMP/OpenMP/src/: main.cpp
apps/CMP/SYCL/: CMakeLists.txt  README.md  gpu_run.sh
apps/CMP/SYCL/include/: log.hpp
apps/CMP/SYCL/src/: log.cpp  main.cpp
apps/CRS/: CMP.ipynb  CRS.csv  CRS.ipynb
apps/CRS/FPGA_SYCL/: CMakeLists.txt  README.md  compile_fpga.sh  run_fpga.sh
apps/CRS/FPGA_SYCL/include/: su_trace.hpp
apps/CRS/FPGA_SYCL/src/: dirtmain.cpp  main.cpp  main_complete.cpp  main_hybrid.cpp  main_optimized.cpp  main_original.cpp  parser.cpp  su_gather.cpp
apps/CRS/OpenCL/: CMakeLists.txt  README.md
apps/CRS/OpenCL/cl/: kernels.cl
apps/CRS/OpenCL/include/: utils.hpp
apps/CRS/OpenCL/src/: main.cpp  utils.cpp
apps/CRS/OpenMP/: CMakeLists.txt  CMakeLists.txt.gcc  CMakeLists.txt.pgi  README.md
apps/CRS/OpenMP/src/: main.cpp  su_trace.cpp
apps/CRS/SYCL/: CMakeLists.txt.gcc  README.md  gpu_run.sh
apps/CRS/SYCL/include/: su_gather.hpp  utils.hpp
apps/CRS/SYCL/src/: main.cpp
apps/Cpp_common/: device_picker.hpp
datasets/CMP/: fpga_sycl-cmp.coher.eps  fpga_sycl-cmp.stack.eps  ocl-cmp.c.eps  ocl-cmp.coher.eps  ocl-cmp.stack.eps  omp-cmp.c.eps  sycl-cmp.c.eps  sycl-cmp.coher.eps  sycl-cmp.stack.eps
datasets/CRS/: fpga_sycl-crs.a.eps  fpga_sycl-crs.b.eps  fpga_sycl-crs.c.eps  fpga_sycl-crs.coher.eps  fpga_sycl-crs.stack.eps  ocl-crs.a.eps  ocl-crs.b.eps  ocl-crs.c.eps  ocl-crs.coher.eps  ocl-crs.stack.eps  omp-crs.a.eps  omp-crs.b.eps  omp-crs.c.eps  omp-crs.coher.eps  omp-crs.stack.eps  sycl-crs.a.eps  sycl-crs.b.eps  sycl-crs.c.eps  sycl-crs.coher.eps  sycl-crs.stack.eps
